# windcraft

./: .gitignore  .travis.yml  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yaml  docs.yaml
docs/: Makefile  conf.py  contribute.rst  credit.rst  index.rst  install.rst  make.bat  methods.rst  source.rst  user.rst
incompsolver/: main.py  plotcfd.py  solver.py  test_projection.py
tests/: test_solver.py
windcraft/: __init__.py  arrow.py  bulbs.py  colors.py  farm.py  fonts.py  logo.py  main.py  player.py  slider.py  solver.py  text.py  turbine.py
windcraft/incompsolver/: main.py  plotcfd.py  solver.py  test_projection.py
