[metadata]
name = windcraft
summary = Arcade game to optimize a wind farm
description-file = README.md
author = Marc T. Henry de Frahan
author-email = marc.henrydefrahan@nrel.gov
home-page = https://github.com/marchdf/windcraft
license = Apache 2.0
project_urls =
    Bug Reports = https://github.com/marchdf/windcraft/issues
    Source Code = https://github.com/marchdf/windcraft
    Documentation = https://readthedocs.org/projects/windcraft/badge/?version=latest
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Games/Entertainment :: Arcade
    Topic :: Scientific/Engineering :: Physics
keywords =
    arcade
    game
    turbine
    computational
    fluid
    dynamics

[files]
packages =
    windcraft

[entry_points]
console_scripts =
    windcraft = windcraft.main:main

[build_sphinx]
builder = html
source-dir = docs
all_files  = 1
warning-is-error = 1

[bdist_wheel]
universal=1
